# OpenCV_cuda_test

./: CMakeLists.txt  resize_gpu.cpp
